# football-manager

./: .cursorrules  .env.dev.example  .env.example  .gitignore  .gitlab-ci.yml  .sudo_pass  AGENTS.md  BACKLOG.md  DEPLOYMENT.md  Dockerfile  FUTURE.md  MIGRATION_CONTEXT.md  NSS_milestone1.md  PROJECT.md  README.md  add_vote_team_column.py  app_logs.txt  apply_fix.py  balance_final_log.txt  balance_final_retry.txt  balance_log.txt  balance_output.txt  benchmark_script.py  benchmark_stats.py  benchmark_sync.py  check_game_1.py  check_game_1_date.py  check_game_47.py  check_games.py  clean_db.py  compile_stats.py  compose_error.txt  container_fs_check.txt  count_users_log.txt  current_vote_results.txt  db_inspect.txt  db_inspect_running.txt  db_logs_recovered.txt  dbs_list.txt  dead_bot_logs.txt  (+188 more)
.jules/: bolt.md  sentinel.md
alembic/: env.py
app/: config.py  debug_all_chats.py  debug_games.py  list_games.py  worker.py
app_backup_4/: minimal.py
docs/: ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  DEPLOYMENT.md  FUTURE.md  INFRASTRUCTURE.md  INTERNAL_NOTES.md  README_academic.md  README_marketing.md  rating.html
monitoring/: prometheus.yml
nss_docs/: NSS_milestone1.md  NSS_milestone2.md  NSS_presentation_script.md
scripts/: check_cols.py  clean_db.py  entrypoint.sh  fix_historical_signups.py  health_check.py  import_history_final.py  import_history_v4.py  import_history_v5.py  inspect_db.py  migrate_v1_4.py  recalculate_all_ratings.py  recalculate_prod.py  remote_view.py  renumber_games.py  seed_db_production.py  sync_gitlab.sh  update.sh
tests/: conftest.py  (+7 more)
(+309 files in other folders)
