[project]
name = "football-manager"
version = "0.1.0"
description = "Telegram Bot and WebApp for amateur football match management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram==3.13.1",
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sqlalchemy==2.0.23",
    "asyncpg==0.29.0",
    "python-dotenv==1.0.0",
    "apscheduler==3.10.4",
    "redis==5.0.1",
    "pydantic>=2.0.0",
    "alembic==1.13.1",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.22.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
